add: role endpoints
